# Fortnite-Project

./: .gitignore  CMakeLists.txt  README.md  config.json  offsets.json
src/: config.cpp  config.h  main.cpp
src/demo/: demo.cpp  demo.h
src/dumper/: dumper.cpp  dumper.h  ue_structures.h  validator.cpp  validator.h
src/entity/: entity.cpp  entity.h  math.cpp  math.h
src/memory/: memory.cpp  memory.h  syscalls.cpp  syscalls.h
src/offsets/: offsets.cpp  offsets.h  scanner.cpp  scanner.h
src/overlay/: overlay.cpp  overlay.h  renderer.cpp  renderer.h
src/stealth/: stealth.cpp  stealth.h
